--- a/index.html
+++ b/index.html
@@ -9,16 +9,25 @@
 <body>
     <div class="container">
         <header>
-            <h1>Tipy do Phasmophobia</h1>
+            <h1>Tipy do Gier</h1>
+            <nav>
+                <ul>
+                    <li><a href="#phasmophobia-tips" class="button">Phasmophobia Tips</a></li>
+                </ul>
+            </nav>
         </header>
+        
         <main>
-            <section>
-                <h2>Tip #1: Jak szybko zebrać dowody?</h2>
-                <p>Wskazówki jak skutecznie znaleźć dowody w grze Phasmophobia...</p>
-            </section>
-            <section>
-                <h2>Tip #2: Jak przeżyć dłużej?</h2>
-                <p>Porady jak przeżyć w trakcie ataku ducha...</p>
+            <section id="phasmophobia-tips">
+                <h2>Tipy do Phasmophobia</h2>
+                <div class="tip">
+                    <h3>Tip #1: Jak szybko zebrać dowody?</h3>
+                    <p>Wskazówki jak skutecznie znaleźć dowody w grze Phasmophobia...</p>
+                </div>
+                <div class="tip">
+                    <h3>Tip #2: Jak przeżyć dłużej?</h3>
+                    <p>Porady jak przeżyć w trakcie ataku ducha...</p>
+                </div>
             </section>
         </main>
     </div>
