moved phasmo tips to another site

--- a/index.html
+++ b/index.html
@@ -12,24 +12,10 @@
             <h1>Tipy do Gier</h1>
             <nav>
                 <ul>
-                    <li><a href="#phasmophobia-tips" class="button">Phasmophobia Tips</a></li>
+                    <li><a href="phasmophobia.html" class="button">Phasmophobia Tips</a></li>
                 </ul>
             </nav>
         </header>
-        
-        <main>
-            <section id="phasmophobia-tips">
-                <h2>Tipy do Phasmophobia</h2>
-                <div class="tip">
-                    <h3>Tip #1: Jak szybko zebrać dowody?</h3>
-                    <p>Wskazówki jak skutecznie znaleźć dowody w grze Phasmophobia...</p>
-                </div>
-                <div class="tip">
-                    <h3>Tip #2: Jak przeżyć dłużej?</h3>
-                    <p>Porady jak przeżyć w trakcie ataku ducha...</p>
-                </div>
-            </section>
-        </main>
     </div>
 </body>
 </html>
