some small changes

--- a/phasmophobia.html
+++ b/phasmophobia.html
@@ -19,14 +19,21 @@
         
         <main>
             <section id="phasmophobia-tips">
-                <div class="tip">
-                    <h3>Tip #1: Jak szybko zebrać dowody?</h3>
-                    <p>Wskazówki jak skutecznie znaleźć dowody w grze Phasmophobia...</p>
-                </div>
-                <div class="tip">
-                    <h3>Tip #2: Jak przeżyć dłużej?</h3>
-                    <p>Porady jak przeżyć w trakcie ataku ducha...</p>
-                </div>
+                <h2>Ogólne Wskazówki</h2>
+                <ul class="tips-list">
+                    <li><strong>Nie pomijaj tutoriala,</strong> dzięki niemu nauczysz się korzystać ze sprzętu w mniej stresującym środowisku.</li>
+                    <li><strong>Obserwuj otoczenie,</strong> kiedy wejdziesz do lokacji – włączone/wyłączone światła, przesuwające się przedmioty, dzwoniące telefony, otwierające się drzwi itp., to mogą być oznaki obecności ducha.</li>
+                    <li><strong>Zrób zdjęcia przedmiotom,</strong> takim jak Tablica Ouija, kości, lalki voodoo czy ślady UV, aby zdobyć dodatkowe pieniądze.</li>
+                    <li><strong>Pozostań w oświetlonych miejscach,</strong> aby utrzymać wysoki poziom zdrowia psychicznego – im dłużej jesteś w ciemności, tym bardziej spada Twoje zdrowie psychiczne.</li>
+                    <li><strong>Nie zostawiaj zbyt wielu świateł włączonych,</strong> ponieważ może to spowodować przepalenie bezpiecznika.</li>
+                    <li><strong>Rozdziel się na drużynę,</strong> ale w razie potrzeby wróć do innych, gdy coś dziwnego zacznie się dziać.</li>
+                    <li><strong>Podczas identyfikowania ducha,</strong> kiedy wybierasz dowody, liczba możliwych typów duchów maleje, co ułatwia zawężenie, kto może to być.</li>
+                    <li><strong>Szukaj kluczy,</strong> które są ukryte w lokacji, bo odblokują więcej obszarów do zwiedzenia.</li>
+                    <li><strong>Naucz się układu lokacji</strong> i pracuj z drużyną, aby mieć dobre wyjścia ewakuacyjne, gdy sytuacja stanie się napięta.</li>
+                    <li><strong>Nie bój się opuścić lokacji,</strong> nawet jeśli nie zebrałeś wszystkiego, bo uratujesz zakupiony sprzęt, który w innym przypadku byś stracił.</li>
+                    <li><strong>Nie bój się ukrywać za meblami</strong> podczas polowania – jeśli uda Ci się zerwać kontakt wzrokowy z duchem, masz szansę przeżyć.</li>
+                    <li><strong>Jeśli zostaniesz zabity,</strong> nadal możesz pomóc drużynie, nawigując ich i ostrzegając o nadchodzącym duchu, jeśli używasz czatu głosowego poza grą.</li>
+                </ul>
             </section>
         </main>
     </div>
