some minor changes to phasmophobia.html

--- a/phasmophobia.html
+++ b/phasmophobia.html
@@ -25,8 +25,8 @@
                     <li><strong>Obserwuj otoczenie,</strong> kiedy wejdziesz do lokacji – włączone/wyłączone światła, przesuwające się przedmioty, dzwoniące telefony, otwierające się drzwi itp., to mogą być oznaki obecności ducha.</li>
                     <li><strong>Zrób zdjęcia przedmiotom,</strong> takim jak Tablica Ouija, kości, lalki voodoo czy ślady UV, aby zdobyć dodatkowe pieniądze.</li>
                     <li><strong>Pozostań w oświetlonych miejscach,</strong> aby utrzymać wysoki poziom zdrowia psychicznego – im dłużej jesteś w ciemności, tym bardziej spada Twoje zdrowie psychiczne.</li>
-                    <li><strong>Nie zostawiaj zbyt wielu świateł włączonych,</strong> ponieważ może to spowodować przepalenie bezpiecznika.</li>
-                    <li><strong>Rozdziel się na drużynę,</strong> ale w razie potrzeby wróć do innych, gdy coś dziwnego zacznie się dziać.</li>
+                    <li><strong>Nie zostawiaj zbyt wielu świateł włączonych,</strong> ponieważ może to spowodować wywalenie korków.</li>
+                    <li><strong>Podzielcie się na dwie drużyny,</strong> jeżeli grasz z kimś, ale w razie potrzeby wróć do innych, gdy coś dziwnego zacznie się dziać.</li>
                     <li><strong>Podczas identyfikowania ducha,</strong> kiedy wybierasz dowody, liczba możliwych typów duchów maleje, co ułatwia zawężenie, kto może to być.</li>
                     <li><strong>Szukaj kluczy,</strong> które są ukryte w lokacji, bo odblokują więcej obszarów do zwiedzenia.</li>
                     <li><strong>Naucz się układu lokacji</strong> i pracuj z drużyną, aby mieć dobre wyjścia ewakuacyjne, gdy sytuacja stanie się napięta.</li>
@@ -35,7 +35,42 @@
                     <li><strong>Jeśli zostaniesz zabity,</strong> nadal możesz pomóc drużynie, nawigując ich i ostrzegając o nadchodzącym duchu, jeśli używasz czatu głosowego poza grą.</li>
                 </ul>
             </section>
-        </main>
-    </div>
-</body>
-</html>
+
+            <section id="ghost-hunting-tips">
+                <h2>Wskazówki na Polowanie na Ducha</h2>
+                <ul class="tips-list">
+                    <li><strong>Pogoda ma wpływ na wykrywanie ducha.</strong> Deszcz lub wiatr mogą utrudnić słyszenie, a gęsta mgła ograniczy widoczność.</li>
+                    <li><strong>Bądź szybki przy szukaniu dowodów,</strong> np. odcisków palców UV. Znikają one po 2 minutach, a odciski stóp po około 10 sekundach.</li>
+                    <li><strong>Duchy nie zawsze polują w jednym pomieszczeniu,</strong> czasem potrafią wędrować po całej mapie.</li>
+                    <li><strong>Pokój ducha może się zmieniać</strong> w trakcie jednej sesji, zwłaszcza na wyższych poziomach trudności (np. Profesjonalny).</li>
+                    <li><strong>Kiedy duch poluje,</strong> staraj się ukryć w szafie lub szafce.</li>
+                    <li><strong>Jeśli nie ma dostępnych szafek,</strong> spróbuj schować się za meblami. Zerwanie kontaktu wzrokowego może uratować Ci życie.</li>
+                    <li><strong>Niższy poziom zdrowia psychicznego</strong> zwiększa ryzyko ataku ducha.</li>
+                    <li><strong>Potrafisz biegać jak większość duchów,</strong> ale tylko przez chwilę (sprint trwa 3 sekundy, a potem jest 5-sekundowa przerwa).</li>
+                    <li><strong>Jeśli słyszysz bicie serca,</strong> to znak, że duch jest blisko.</li>
+                    <li><strong>Orby ducha są widoczne tylko przez kamery,</strong> które można oglądać przez kamerę w ciężarówce lub ekran wideo.</li>
+                    <li><strong>Duchy mogą być oporne w wydawaniu dowodów,</strong> więc nie wykluczaj niczego, dopóki nie będziesz pewny.</li>
+                    <li><strong>Zlew może się napełnić brudną wodą,</strong> jeśli duch jest blisko.</li>
+                    <li><strong>Duchy stają się bardziej agresywne,</strong> im dłużej gracze pozostają w danej misji, więc im szybciej znajdziesz dowody, tym lepiej.</li>
+                    <li><strong>Pokój z duchem będzie z czasem coraz zimniejszy,</strong> więc weź termometr, aby sprawdzić, czy jest w pobliżu.</li>
+                    <li><strong>Duchy nie widzą przez zamknięte drzwi,</strong> więc możesz się za nimi ukryć, gdy potrzebujesz przerwy lub gdy duch poluje.</li>
+                    <li><strong>Duch nie musi wchodzić w interakcję z drzwiami,</strong> aby przejść przez nie. Może je przejść bez otwierania, więc nie trzymaj drzwi zamkniętych na siłę.</li>
+                    <li><strong>Duchy w Phasmophobii mogą reagować na Twój mikrofon,</strong> jeśli używasz aktywacji głosowej, więc staraj się być cichy podczas polowania!</li>
+                    <li><strong>Używanie imienia ducha</strong> może go rozgniewać, więc bądź ostrożny, co mówisz.</li>
+                    <li><strong>Podczas ukrywania się</strong> próbuj schować się w osobnych miejscach od swoich kolegów z drużyny. Duchy w wyższych trudnościach mogą zabić całą drużynę na raz.</li>
+                </ul>
+            </section>
+
+            <section id="equipment-tips">
+                <h2>Wskazówki dotyczące Sprzętu</h2>
+                <ul class="tips-list">
+                    <li><strong>Niektóre urządzenia działają,</strong> nawet gdy są odłożone. Na przykład EMF Reader pozwala monitorować inne części domu, bez konieczności trzymania go w ręce.</li>
+                    <li><strong>Uważaj na Przeklęte Przedmioty,</strong> ponieważ mogą mieć negatywne skutki, jeśli używane zbyt często!</li>
+                    <li><strong>Dobrym pomysłem jest rozpoczęcie z EMF Reader i Termometrem,</strong> ponieważ są to najskuteczniejsze urządzenia do śledzenia ducha.</li>
+                    <li><strong>Cyfrowy Zegar w ciężarówce</strong> pokazuje, jak długo masz, zanim duch stanie się agresywny, a zdrowie psychiczne zacznie spadać szybciej.</li>
+                    <li><strong>Poziom 2 na EMF Reader</strong> oznacza, że duch wchodzi w interakcję z przedmiotem, poziom 3 oznacza, że duch rzucił przedmiot, a poziom 4 występuje tylko wtedy, gdy duch się pojawi.</li>
+                    <li><strong>Posypywanie Solą</strong> sprawia, że duch zostawia odciski stóp. Możesz je znaleźć za pomocą UV Light, więc staraj się wysypywać sól w drzwiach i w miejscach o dużym natężeniu ruchu (drzwi, schody itp.).</li>
+                    <li><strong>Umieść UV Light przy Soli</strong>, aby sprawdzać odciski stóp, bez trzymania przedmiotu w ręce.</li>
+                    <li><strong>Upewnij się, że światła są wyłączone</strong> podczas używania Spirit Box.</li>
+                    <li><strong>Krzyżyk chroni przed Polowaniami,</strong> a Kadzidło może sprawić, że duch Cię zignoruje na krótki czas podczas polowania.</li>
+                    <li><strong>Postaw Ghost Writing Book i umieść kamerę wideo przed nim,</strong> aby monitorować pisanie bez konieczności wchodzenia do domu,
