some small changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>Tipy do Gier</h1>
             <nav>
                 <ul>
-                    <li><a href="phasmophobia.html" class="button">Phasmophobia Tips</a></li>
+                    <li><a href="phasmophobia.html" class="button">Phasmophobia Tips & Tricks *Under development*</a></li>
                 </ul>
             </nav>
         </header>
